# grac

./: README.md  pyproject.toml
grac/: __init__.py  acc_parse.py  account.py  book.py  line.py  partner.py  transaction.py
tests/: ac2.txt  graccount_data.json  test_acc_parse.py  test_account.py  test_book.py  test_line.py  test_partner.py  test_transaction.py
