[tool.poetry]
name = "grac"
version = "0.1.0"
description = ""
authors = ["Ted Lazaros <tedlaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tedutil = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
autopep8 = "^1.5.7"
rope = "^0.19.0"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
